--- a/황현식/html/06 form/action.html
+++ b/황현식/html/06 form/action.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>action.html</title>
   <script src="./js/action.js"></script>
-  <title>action</title>
 </head>
 <body>
-  데이터를 수신
+  
 </body>
 </html>
