--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script scr="2.quiz.js"></script>
+    <script scr="5.quiz.js"></script>
   </head>
-  <body>
-    <ul>
-      <li>
-        <label>숫자1</label>
-        <input type="text" name="num1" id="num1" placeholder="0" />
-      </li>
-      <li>
-        <label>숫자2</label>
-        <input type="text" name="num2" id="num2" placeholder="0" />
-      </li>
-      <li>
-        <button type="button" onclick="calculator">연산하기</button>
-      </li>
-    </ul>
-  </body>
+  <body></body>
 </html>
