--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script scr="5.quiz.js"></script>
+    
   </head>
-  <body></body>
+  <body><script src="./3.control/2.quiz.js"></script></body>
 </html>
+
