--- a/portpolio_copy/index.html
+++ b/portpolio_copy/index.html
@@ -15,23 +15,21 @@
   </head>
   <body>
     <!-- header -->
-    <header>
-      <!-- header  -->
-      <div>
-        <!-- header logo -->
-        <img src="alt" ="" /><!-- favicon -->
+    <header class="header">
+      <div class="header__logo">
+        <img class="header__logo__title" src="images/favicon.ico" alt="logo" />
         <h1>Judy</h1>
       </div>
       <nav>
-        <ul>
-          <li><a>Home</a></li>
-          <li><a>About</a></li>
-          <li><a>Skills</a></li>
-          <li><a>My work</a></li>
+        <ul class="header__menu">
+          <li><a class="header__menu__item active" href="#home">Home</a></li>
+          <li><a class="header__menu__item" href="#about">About</a></li>
+          <li><a class="header__menu__item" href="#skill">Skills</a></li>
+          <li><a class="header__menu__item" href="#work">My work</a></li>
           <li>
-            <a>Testimonial</a>
+            <a class="header__menu__item" href="#Testimonial">Testimonial</a>
           </li>
-          <li><a>Contact</a></li>
+          <li><a class="header__menu__item" href="#Contact">Contact</a></li>
         </ul>
       </nav>
     </header>
