--- a/indexcopy.html
+++ b/indexcopy.html
@@ -58,58 +58,45 @@
       </section>
 
       <!-- About me -->
-      <section id="about" class="section max-container">
-        <h2>About me</h2>
-        <p >
+      <section id="about" class="section max-container"> <!-- id주는거 링크타려고-->
+        <h2 class="title">About me</h2> <!-- title, descript 위에 공용설정해놓음 -->
+        <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus,
           temporibus perspiciatis repudiandae nostrum modi doloremque expedita
           non eius ipsum! Beatae porro adipisci omnis architecto dignissimos.
           Iusto ipsa inventore adipisci.
         </p>
-        <ul>
-          <li>
-            <i class="fa-brands fa-html5 major__icon"></i>
-            <p>Front-end</p>
+        <ul class="majors">
+          <li class="major">
+            <i class="fa-brands fa-html5 major__icon"></i><!-- major__icon 가져와야 폰트커짐 -->
+            <!-- 한칸띄우면 클래스하나 더쓸수있음 -->
+            <p class="major__title">Front-end</p>
             <p>HTML, CSS, JavaScript, TypeScript, React, WebAPIs</p>
           </li>
           <li class="major">
             <i class="fa-solid fa-mobile major__icon"></i>
-            <p>Mobile</p>
+            <p class="major__title">Mobile</p>
             <p>Android Studio, React Native, iOS, Swift, Java, Kotlin</p>
           </li>
           <li class="major">
             <i class="fa-solid fa-server major__icon"></i>
-            <p>Back-end</p>
+            <p class="major__title">Back-end</p>
             <p>Java, JavaScript, Go, Kotlin, Spring, Spring Boot</p>
           </li>
         </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <ul class="jobs">
           <li class="job">
             <img src="images/jobs/google.png" alt="google" />
             <div>
-              <p>Google as Junior Software Engineer</p>
-              <p>2019 Oct - Until now</p>
+              <p class="job__name">Google as Junior Software Engineer</p>
+              <p class="job__period">2019 Oct - Until now</p>
             </div>
           </li>
-          <li>
+          <li class="job">
             <img src="images/jobs/samsung.png" alt="samsung" />
             <div>
-              <p>Samsung as Junior Software Engineer</p>
-              <p>2010 Oct - 2019 Oct</p>
+              <p class="job__name">Samsung as Junior Software Engineer</p>
+              <p class="job__period">2010 Oct - 2019 Oct</p>
             </div>
           </li>
         </ul>
