--- a/portpolio_review/index.html
+++ b/portpolio_review/index.html
@@ -308,7 +308,7 @@
       <section id="testimonial" class="section max-container">
         <h2 class="title">Testimonial</h2>
         <p class="description">See what they say about me</p>
-        <ul class="textmonials">
+        <ul class="testimonials">
           <li class="testimonial">
             <img
               class="testimonial__img"
@@ -322,8 +322,11 @@
                 provident iste modi eos dicta, eum suscipit rem illum inventore
                 sapiente blanditiis?
               </p>
-              <p><a href="#" class="testimonial__bubble__name">James Kim </a>/ Google</p>
-            </div class="testimonial__bubble">
+              <p>
+                <a href="#" class="testimonial__bubble__name">James Kim</a> /
+                Google
+              </p>
+            </div>
           </li>
           <li class="testimonial">
             <img
@@ -339,7 +342,10 @@
                 debitis cupiditate, tempora officiis sed inventore nihil
                 incidunt.
               </p>
-              <p><a href=# class="testimonial__bubble__name">Smith Park</a> / Samsung</p>
+              <p>
+                <a href="#" class="testimonial__bubble__name">Smith Park</a> /
+                Samsung
+              </p>
             </div>
           </li>
           <li class="testimonial">
@@ -356,7 +362,10 @@
                 pariatur temporibus hic blanditiis explicabo voluptatibus neque
                 aliquam.
               </p>
-              <p><a href="#" class="testimonial__bubble__name">Anna Jin </a>/ Samsung</p>
+              <p>
+                <a href="#" class="testimonial__bubble__name">Anna Jin</a> /
+                Samsung
+              </p>
             </div>
           </li>
         </ul>
@@ -369,15 +378,19 @@
     </main>
 
     <!-- footer -->
-    <footer id="contact" class="section ">
+    <footer id="contact" class="section">
       <h2 class="title">Let's talk</h2>
       <p class="description">jeon.developer.judy@gmail.com</p>
       <ul class="contact__links">
         <li>
-          <a class="contact__link" href="http://github.com"><i class="fa-brands fa-github"></i></a>
+          <a class="contact__link" href="http://github.com"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </li>
         <li>
-          <a class="contact__link" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+          <a class="contact__link" href="http://linkedin.com"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </li>
       </ul>
       <p>Dream Software Engineer Judy - All right reserved</p>
