클래스삭제

--- a/portpolio_review/index.html
+++ b/portpolio_review/index.html
@@ -59,7 +59,9 @@
 
       <!-- About me -->
       <section id="about" class="section max-container">
+        <!-- id주는거 링크타려고-->
         <h2 class="title">About me</h2>
+        <!-- title, descript 위에 공용설정해놓음 -->
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus,
           temporibus perspiciatis repudiandae nostrum modi doloremque expedita
@@ -67,11 +69,15 @@
           Iusto ipsa inventore adipisci.
         </p>
         <ul class="majors">
+          <!-- flex적용 가로정렬 -->
           <li class="major">
-            <i class="fa-brands fa-html5 major__icon"></i>
+            <i class="fa-brands fa-html5 major__icon"></i
+            ><!-- major__icon 가져와야 폰트커짐 -->
+            <!-- 한칸띄우면 클래스하나 더쓸수있음 -->
             <p class="major__title">Front-end</p>
             <p>HTML, CSS, JavaScript, TypeScript, React, WebAPIs</p>
           </li>
+
           <li class="major">
             <i class="fa-solid fa-mobile major__icon"></i>
             <p class="major__title">Mobile</p>
@@ -83,6 +89,7 @@
             <p>Java, JavaScript, Go, Kotlin, Spring, Spring Boot</p>
           </li>
         </ul>
+
         <ul class="jobs">
           <li class="job">
             <img src="images/jobs/google.png" alt="google" />
@@ -91,6 +98,7 @@
               <p class="job__period">2019 Oct - Until now</p>
             </div>
           </li>
+
           <li class="job">
             <img src="images/jobs/samsung.png" alt="samsung" />
             <div>
