--- a/portpolio_copy/index.html
+++ b/portpolio_copy/index.html
@@ -59,57 +59,44 @@
 
       <!-- About me -->
       <section id="about" class="section max-container">
-        <h2>About me</h2>
-        <p >
+        <h2 class="title">About me</h2>
+        <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure natus,
           temporibus perspiciatis repudiandae nostrum modi doloremque expedita
           non eius ipsum! Beatae porro adipisci omnis architecto dignissimos.
           Iusto ipsa inventore adipisci.
         </p>
-        <ul>
-          <li>
+        <ul class="majors">
+          <li class="major">
             <i class="fa-brands fa-html5 major__icon"></i>
-            <p>Front-end</p>
+            <p class="major__title">Front-end</p>
             <p>HTML, CSS, JavaScript, TypeScript, React, WebAPIs</p>
           </li>
           <li class="major">
             <i class="fa-solid fa-mobile major__icon"></i>
-            <p>Mobile</p>
+            <p class="major__title">Mobile</p>
             <p>Android Studio, React Native, iOS, Swift, Java, Kotlin</p>
           </li>
           <li class="major">
             <i class="fa-solid fa-server major__icon"></i>
-            <p>Back-end</p>
+            <p class="major__title">Back-end</p>
             <p>Java, JavaScript, Go, Kotlin, Spring, Spring Boot</p>
           </li>
         </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <ul class="jobs">
           <li class="job">
             <img src="images/jobs/google.png" alt="google" />
             <div>
-              <p>Google as Junior Software Engineer</p>
-              <p>2019 Oct - Until now</p>
+              <p class="job__name">Google as Junior Software Engineer</p>
+              <p class="job__period">2019 Oct - Until now</p>
             </div>
           </li>
+
           <li>
             <img src="images/jobs/samsung.png" alt="samsung" />
             <div>
-              <p>Samsung as Junior Software Engineer</p>
-              <p>2010 Oct - 2019 Oct</p>
+              <p class="job__name">Samsung as Junior Software Engineer</p>
+              <p class="job__period">2010 Oct - 2019 Oct</p>
             </div>
           </li>
         </ul>
@@ -125,62 +112,50 @@
           cupiditate optio natus? Cum, harum eum sint id quod nulla adipisci.
           Sunt?
         </p>
-        <div class="skills">
-          <article class="sklls__coding">
-            <h3 class="skill__title">Coding Skills</h3>
+        <div>
+          <article>
+            <h3>Coding Skills</h3>
             <ul>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>HTML</span><span>98%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width: 98%"></div>
+              <li>
+                <div><span>HTML</span><span>98%</span></div>
+                <div>
+                  <div></div>
                 </div>
               </li>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>CSS</span><span>90%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width: 90%"></div>
+              <li>
+                <div><span>CSS</span><span>90%</span></div>
+                <div>
+                  <div></div>
                 </div>
               </li>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>JavaScript</span><span>90%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width: 90%"></div>
+              <li>
+                <div><span>JavaScript</span><span>90%</span></div>
+                <div>
+                  <div></div>
                 </div>
               </li>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>TypeScript</span><span>80%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width: 80%"></div>
+              <li>
+                <div><span>TypeScript</span><span>80%</span></div>
+                <div>
+                  <div></div>
                 </div>
               </li>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>React</span><span>79%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width: 79%"></div>
+              <li>
+                <div><span>React</span><span>79%</span></div>
+                <div>
+                  <div></div>
                 </div>
               </li>
-              <li class="bar">
-                <div class="bar__metadata">
-                  <span>NodeJS</span><span>68%</span>
-                </div>
-                <div class="bar__bg">
-                  <div class="bar__value" style="width: 68%"></div>
+              <li>
+                <div><span>NodeJS</span><span>68%</span></div>
+                <div>
+                  <div></div>
                 </div>
               </li>
             </ul>
           </article>
-          <article class="skills__tools">
-            <h3 class="skill__title">Tools</h3>
+          <article>
+            <h3>Tools</h3>
             <ul>
               <li>Visual Studio Code</li>
               <li>IntelliJ</li>
@@ -189,8 +164,8 @@
               <li>Eclipse</li>
             </ul>
           </article>
-          <article class="skills__etc">
-            <h3 class="skill__title">Etc</h3>
+          <article>
+            <h3>Etc</h3>
             <ul>
               <li>Git</li>
               <li>Scrum Master</li>
@@ -201,117 +176,77 @@
       </section>
 
       <!-- My work -->
-      <section id="work" class="section max-container">
-        <h2 class="title">My work</h2>
-        <p class="description">Projects</p>
-        <ul class="categories">
+      <section>
+        <h2>My work</h2>
+        <p>Projects</p>
+        <ul>
           <li>
-            <button class="category category--selected">
-              All<span class="category__count">8</span>
-            </button>
+            <button>All<span>8</span></button>
           </li>
           <li>
-            <button class="category">
-              Front-end<span class="category__count">4</span>
-            </button>
+            <button>Front-end<span>4</span></button>
           </li>
           <li>
-            <button class="category">
-              Back-end<span class="category__count">2</span>
-            </button>
+            <button>Back-end<span>2</span></button>
           </li>
           <li>
-            <button class="category">
-              Mobile<span class="category__count">2</span>
-            </button>
+            <button>Mobile<span>2</span></button>
           </li>
         </ul>
-        <ul class="projects">
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project1.webp"
-              alt="project1"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #1</h3>
+        <ul>
+          <li>
+            <img />
+            <div>
+              <h3>Project #1</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project2.webp"
-              alt="project2"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #2</h3>
+          <li>
+            <img />
+            <div>
+              <h3>Project #2</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project3.webp"
-              alt="project3"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #3</h3>
+          <li>
+            <img />
+            <div>
+              <h3>Project #3</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project4.webp"
-              alt="project4"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #4</h3>
+          <li>
+            <img />
+            <div c>
+              <h3>Project #4</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project5.webp"
-              alt="project5"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #5</h3>
+          <li>
+            <img />
+            <div>
+              <h3>Project #5</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project6.webp"
-              alt="project6"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #6</h3>
+          <li>
+            <img />
+            <div>
+              <h3>Project #6</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project7.webp"
-              alt="project7"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #7</h3>
+          <li>
+            <img />
+            <div>
+              <h3>Project #7</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
-          <li class="project">
-            <img
-              class="project__img"
-              src="images/projects/project8.webp"
-              alt="project8"
-            />
-            <div class="project__metadata">
-              <h3 class="project__metadata__title">Project #8</h3>
+          <li>
+            <img />
+            <div>
+              <h3>Project #8</h3>
               <p>Clone Coding with HTML, CSS</p>
             </div>
           </li>
@@ -319,33 +254,25 @@
       </section>
 
       <!-- Testimonials -->
-      <section id="testimonial" class="section max-container">
-        <h2 class="title">Testimonial</h2>
-        <p class="description">See what they say about me</p>
-        <ul class="textmonials">
-          <li class="testimonial">
-            <img
-              class="testimonial__img"
-              src="images/testimonials/people1.webp"
-              alt="people1"
-            />
-            <div class="testimonial__bubble">
+      <section>
+        <h2>Testimonial</h2>
+        <p>See what they say about me</p>
+        <ul>
+          <li>
+            <img />
+            <div>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Reiciendis similique, unde nam totam quam, nisi odio error amet
                 provident iste modi eos dicta, eum suscipit rem illum inventore
                 sapiente blanditiis?
               </p>
-              <p><a href="#" class="testimonial__bubble__name">James Kim </a>/ Google</p>
-            </div class="testimonial__bubble">
+              <p><a>James Kim </a>/ Google</p>
+            </div>
           </li>
-          <li class="testimonial">
-            <img
-              class="testimonial__img"
-              src="images/testimonials/people2.webp"
-              alt="people2"
-            />
-            <div class="testimonial__bubble">
+          <li>
+            <img />
+            <div>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
                 necessitatibus sequi id obcaecati, assumenda quam corrupti.
@@ -353,16 +280,12 @@
                 debitis cupiditate, tempora officiis sed inventore nihil
                 incidunt.
               </p>
-              <p><a href=# class="testimonial__bubble__name">Smith Park</a> / Samsung</p>
+              <p><a>Smith Park</a> / Samsung</p>
             </div>
           </li>
-          <li class="testimonial">
-            <img
-              class="testimonial__img"
-              src="images/testimonials/people3.webp"
-              alt="people3"
-            />
-            <div class="testimonial__bubble">
+          <li>
+            <img />
+            <div>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Distinctio nulla incidunt autem ullam, commodi in impedit
@@ -370,7 +293,7 @@
                 pariatur temporibus hic blanditiis explicabo voluptatibus neque
                 aliquam.
               </p>
-              <p><a href="#" class="testimonial__bubble__name">Anna Jin </a>/ Samsung</p>
+              <p><a>Anna Jin </a>/ Samsung</p>
             </div>
           </li>
         </ul>
@@ -378,20 +301,20 @@
 
       <!-- Arrow up -->
       <aside>
-        <a class="arrow--up" href="#"><i class="fa-solid fa-arrow-up"></i></a>
+        <a><i></i></a>
       </aside>
     </main>
 
     <!-- footer -->
-    <footer id="contact" class="section ">
-      <h2 class="title">Let's talk</h2>
-      <p class="description">jeon.developer.judy@gmail.com</p>
-      <ul class="contact__links">
+    <footer>
+      <h2>Let's talk</h2>
+      <p>jeon.developer.judy@gmail.com</p>
+      <ul>
         <li>
-          <a class="contact__link" href="http://github.com"><i class="fa-brands fa-github"></i></a>
+          <a><i></i></a>
         </li>
         <li>
-          <a class="contact__link" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+          <a><i></i></a>
         </li>
       </ul>
       <p>Dream Software Engineer Judy - All right reserved</p>
